# postiz_social_automation

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
.claude/evals/: alerting.md  metrics_20260220.json
.claude/instincts/: dataclass-enum-results.json  export-2026-02-20.json  gitignored-config-force-add.json  mock-boundary-tdd.json  scripts-pythonpath-pattern.json
.claude/orchestrate/feature/: 1-planner.md  2-tdd-guide.md  3-code-reviewer.md  4-security-reviewer.md  REPORT.md
.claude/orchestrate/review/: 1-code-reviewer.md  2-security-reviewer.md  3-database-reviewer.md  REPORT.md
.taskmaster/: config.json  state.json  tasks.json
.taskmaster/docs/: prd_health_monitoring.txt
.taskmaster/reports/: task-complexity-report_health-monitoring.json
.taskmaster/tasks/: tasks.json
docs/: N8N_INTEGRATION.md  TEST2_CONTINUOUS_LEARNING_RESULTS.md  TEST3_ORCHESTRATION_EVAL_RESULTS.md  WORKFLOW_FRICTION.md  WORKFLOW_TEST_PLAN.md  WORKFLOW_TEST_RESULTS.md  gita-valley-context.md  gita-valley-online-presence-audit-v2.md  social-media-automation-assessment.md
scripts/: health_alerter.py  health_checker.py  health_monitor.py  health_notifier.py  health_storage.py
tests/: conftest.py  test_health_alerter.py  test_health_checker.py  test_health_monitor.py  test_health_notifier.py  test_storage.py
