[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postiz-health-monitor"
version = "0.1.0"
description = "Health monitoring for Postiz Docker Compose stack"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may require Docker)",
]
